--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   This is my website
 # social links
 github_username:  lilyxing0
+twitter_username:  lilyxing08
+instagram_username:  _lily_xing_
 
 show_excerpts: true # set to false to remove excerpts on the homepage
