--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Lily's Website :)
 author: Lily Xing
 email: lxing1@ebnet.org
 description: > # this means to ignore newlines until "baseurl:"
-  This is my website
+  This is my social info:
 # social links
 github_username:  lilyxing0
 twitter_username:  lilyxing08
