--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: minima
-title: These are my social info:
+title: This is a website about me!
 author: Lily Xing
 email: lxing1@ebnet.org
 description: > # this means to ignore newlines until "baseurl:"
