--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ github_username:  lilyxing0
 twitter_username:  lilyxing08
 instagram_username:  _lily_xing_
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: false # set to false to remove excerpts on the homepage
