--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ title: This is a website about me
 author: Lily Xing
 email: lxing1@ebnet.org
 description: > # this means to ignore newlines until "baseurl:"
-  This is my social info:
+  A website with some fun facts about me :)
 # social links
 github_username:  lilyxing0
 twitter_username:  lilyxing08
 instagram_username:  _lily_xing_
 
-show_excerpts: false # set to false to remove excerpts on the homepage
+show_excerpts: true # set to false to remove excerpts on the homepage
