--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: minima
-title: This is a website about me
+title: Lily's Website
 author: Lily Xing
 email: lxing1@ebnet.org
 description: > # this means to ignore newlines until "baseurl:"
